--- a/src/Vulkan/vulkan.vcxproj.filters
+++ b/src/Vulkan/vulkan.vcxproj.filters
@@ -252,6 +252,9 @@
     <ClCompile Include="..\WSI\VkSwapchainKHR.cpp">
       <Filter>Source Files\WSI</Filter>
     </ClCompile>
+    <ClCompile Include="..\WSI\Win32SurfaceKHR.cpp">
+      <Filter>Source Files\WSI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
